--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 		<p id="titulo">Datos Personales</p>
 
 		<form action="">
-			<input type="text" id="name" name="name" placeholder="name">
-			<input type="text" id="email" name="email" placeholder="email">
-			<input type="text" id="birthdate" name="birthdate" placeholder="birthdate">
-			<input type="text" id="numberofchildren" name="numberofchildren" placeholder="number of children">
-			<input type="submit" value="submit">
+			<input type="text" id="name" name="name" placeholder="name" maxlength="12" class="form-control" required="required">
+			<input type="text" id="email" name="email" placeholder="email" class="form-control" required="required">
+			Birthdate:<input type="date" name="birthdate" id="birthdate" class="form-control" required="required"> <br />
+			Number of Children:<input type="number" id="numberofchildren" placeholder="0-10" name="numberofchildren" class="form-control" min="0" max="10" step="" required="required"> <br />
+			<button type="submit" class="btn btn-primary">Submit</button>
+			
 		</form>
 	</section>
 </body>
