--- a/index.html
+++ b/index.html
@@ -5,18 +5,28 @@
 	<title>Document</title>
 	<h1>Formulario de Registro</h1>
 	<link rel="stylesheet" href="css/index.css">
+	<script type="text/javascript">
+		
+	</script>
 </head>
 <body>
 	<section id="formulario">
 		<p id="titulo">Datos Personales</p>
 
 		<form action="">
-			<input type="text" id="name" name="name" placeholder="name">
-			<input type="text" id="email" name="email" placeholder="email">
-			<input type="text" id="birthdate" name="birthdate" placeholder="birthdate">
-			<input type="text" id="numberofchildren" name="numberofchildren" placeholder="number of children">
-			<input type="submit" value="submit">
+			<input type="text" id="name" name="name" placeholder="name" maxlength="12" class="form-control" required="required">
+			<input type="text" id="email" name="email" placeholder="email" class="form-control" required="required">
+			Birthdate:<input type="date" name="birthdate" id="birthdate" class="form-control" required="required"> <br />
+			Number of Children:<input type="number" id="numberofchildren" placeholder="0-10" name="numberofchildren" class="form-control" min="0" max="10" step="" required="required"> <br />
+			<button type="submit" onclick="document.getElementById('demo').innerHTML= Date()" class="btn btn-primary">Submit</button>
+	
+			<p id="demo"></p>
+			
 		</form>
 	</section>
+	<img src="images/descarga.jpg" alt="Mountain View" style="width:304px;height:228px;">
+	<h2>Bienvenido a ubuntu</h2>
+	
+
 </body>
 </html>
