Hasta el ejercicio 7

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
 			<p id="demo"></p>
 	
 		</form>
+		
 	</section>
+
+
 	<img src="images/descarga.jpg" alt="Mountain View" style="width:304px;height:228px;">
 	
+	<h1>Ejercicio 4</h1>
+
 	<ul id="a" class="a">Elemento 1</ul>
 	<ul id="a" class="a">Elemento 2</ul>
 	<ul id="a" class="a">Elemento 3</ul>
@@ -43,7 +48,7 @@
 
 	function mOut(obj) {obj.innerHTML = "Mouse Over Me"}
 	</script>
-	<h2>Ejercicio 5</h2> <br>
+	<h1>Ejercicio 5</h1> <br>
 	<!--
 	<form action="">
 	
@@ -66,6 +71,23 @@
 	</form>
 	Resultado: <span class="resultado"> </span>
 
-	<script src="js/index.js"></script>
+	
+
+	<h1>Ejercicio 6</h1>
+
+	<form action="">
+    	<input type="text" id="numero">
+    	<button id="calcular">Calcular</button>
+	</form>
+
+	
+
+	<h1>Ejercicio 7</h1>
+
+	Escoger color para el fondo:<input type="color" id="color">
+
+	<h1>Ejercicio 8</h1>
+	
+	<script src="js/index.js"></script><br>
 </body>
 </html>
