--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 	<title>Document</title>
 	<h1>Formulario de Registro</h1>
 	<link rel="stylesheet" href="css/index.css">
-	<script type="text/javascript">
-		
-	</script>
+	
+
 </head>
 <body>
 	<section id="formulario">
@@ -31,36 +30,12 @@
 	
 	<h1>Ejercicio 4</h1>
 
-	<ul id="a" class="a">Elemento 1</ul>
-	<ul id="a" class="a">Elemento 2</ul>
-	<ul id="a" class="a">Elemento 3</ul>
-
-	<button type="button" onclick="document.getElementById('a').innerHTML='hoolaaaa'">click me</button>
+	<ul id="a" onMouseover="this.style.color='blue'" onMouseout="this.style.color='red'">Elemento 1</ul>
+	<ul id="a" onMouseover="this.style.color='blue'" onMouseout="this.style.color='red'">Elemento 2</ul>
+	<ul id="a" onMouseover="this.style.color='blue'" onMouseout="this.style.color='red'">Elemento 3</ul>
 	
-
-
-	<div onmouseover="mOver(this)" onmouseout="mOut(this)" 
-	style="background-color:#D94A38;width:120px;height:20px;padding:40px;color:blue;">
-	oso</div>
-
-	<script>
-	function mOver(obj) {obj.innerHTML = "Thank You"}
-
-	function mOut(obj) {obj.innerHTML = "Mouse Over Me"}
-	</script>
 	<h1>Ejercicio 5</h1> <br>
-	<!--
-	<form action="">
 	
-	
-	<p>Producto de numeros</p> <br>
-    	Numero 1:<input type="text"  id="numero1" placeholder="ingrese un numero"> <br>
-    	Numero 2:<input type="text"  id="numero2" placeholder="ingrese un numero"> <br>
-    	Resultado:<input type="text"  id="resultado"> <br>
-    	<button type="submit" class="btn btn-default" onclick="res()">Producto</button> <br>
-
-	</form>
-	-->
 	<p>introduzca dos numeros</p>
 	
 	<form action="">
@@ -75,10 +50,12 @@
 
 	<h1>Ejercicio 6</h1>
 
-	<form action="">
+	<form id= "aleatorio" action="">
     	<input type="text" id="numero">
     	<button id="calcular">Calcular</button>
 	</form>
+
+	Resultado: <span class="aleatorios"> </span>
 
 	
 
